board css: fixed css board scrollbar

--- a/css/board.css
+++ b/css/board.css
@@ -1,23 +1,17 @@
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: #A8A8A8 #ffffff;
-}
-
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
     background: #ffffff;
+    border-radius: 16px;
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: #A8A8A8;
     border-radius: 16px;
-    border: 8px solid #A8A8A8;
 }
 
 .d-none {
